--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
     <link data-trunk rel="copy-dir" href="public" />
     <link data-trunk rel="rust" data-wasm-opt="z" />
   </head>
+  <body>
+    <script src="/node_modules/@floating-ui/dom"></script>
+  </body>
 </html>
