Add icon webfont

--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <link data-trunk rel="scss" href="style/main.scss" />
     <link data-trunk rel="copy-dir" href="public" />
     <link data-trunk rel="rust" data-wasm-opt="z" />
+    <link data-trunk
+      rel="css"
+      type="text/css"
+      href="node_modules/@phosphor-icons/web/src/light/style.css"
+    />
+    <link data-trunk
+      rel="copy-file"
+      href="node_modules/@phosphor-icons/web/src/light/Phosphor-Light.ttf"
+      type="font/ttf"
+    />
+    <link data-trunk
+      rel="copy-file"
+      href="node_modules/@phosphor-icons/web/src/light/Phosphor-Light.woff"
+      type="font/woff"
+    />
+    <link data-trunk
+      rel="copy-file"
+      href="node_modules/@phosphor-icons/web/src/light/Phosphor-Light.woff2"
+      type="font/woff2"
+    />
   </head>
   <body>
     <script src="/node_modules/@floating-ui/dom"></script>
